--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@ Home
     <div id="hero-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">
 
       <div class="carousel-item active">
-        <img src="assets/img/hero_1.jpg" alt="">
+        <img src={% static 'img/hero_1.jpg' %} alt="">
         <div class="carousel-container">
           <h2>Farming is the best solution of worlds starvation</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -21,7 +21,7 @@ Home
       </div><!-- End Carousel Item -->
 
       <div class="carousel-item">
-        <img src="assets/img/hero_2.jpg" alt="">
+        <img src={% static 'img/hero_2.jpg' %} alt="">
         <div class="carousel-container">
           <h2>Organic vegetables is good for health</h2>
           <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus.</p>
@@ -29,7 +29,7 @@ Home
       </div><!-- End Carousel Item -->
 
       <div class="carousel-item">
-        <img src="assets/img/hero_3.jpg" alt="">
+        <img src={% static "img/hero_3.jpg" %} alt="">
         <div class="carousel-container">
           <h2>Providing Fresh Produce Every Single Day</h2>
           <p>Beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.</p>
@@ -37,7 +37,7 @@ Home
       </div><!-- End Carousel Item -->
 
       <div class="carousel-item">
-        <img src="assets/img/hero_4.jpg" alt="">
+        <img src={% static 'img/hero_4.jpg' %} alt="">
         <div class="carousel-container">
           <h2>Farming as a Passione</h2>
           <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius.</p>
@@ -45,7 +45,7 @@ Home
       </div><!-- End Carousel Item -->
 
       <div class="carousel-item">
-        <img src="assets/img/hero_5.jpg" alt="">
+        <img src={% static 'img/hero_5.jpg' %} alt="">
         <div class="carousel-container">
           <h2>Good Food For All</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
