--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@ Home
       </div><!-- End Carousel Item -->
 
       <div class="carousel-item">
-        <img src={% static 'img/hero_5.jpg' %} alt="">
+        <img src={% static '' %} alt="">
         <div class="carousel-container">
           <h2>Good Food For All</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
