--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
             <ul>
               <li><a href="index.html" class="active">Home</a></li>
               <li><a href="about.html">About Us</a></li>
-              <li><a href="services.html">Our Services</a></li>
+              <li><a href={% static 'service' %}>Our Services</a></li>
               <li><a href="testimonials.html">Testimonials</a></li>
               <li><a href="blog.html">Blog</a></li>
               <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
