--- a/templates/base.html
+++ b/templates/base.html
@@ -31,8 +31,8 @@
           <nav id="navmenu" class="navmenu">
             <ul>
               <li><a href="index.html" class="active">Home</a></li>
-              <li><a href="about.html">About Us</a></li>
-              <li><a href={% static 'service' %}>Our Services</a></li>
+              <li><a href="/about">About Us</a></li>
+              <li><a href='/service'>Our Services</a></li>
               <li><a href="testimonials.html">Testimonials</a></li>
               <li><a href="blog.html">Blog</a></li>
               <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
