--- a/templates/about.html
+++ b/templates/about.html
@@ -63,7 +63,7 @@ About
     <div class="container">
       <div class="row gy-4 justify-content-between align-items-center">
         <div class="col-lg-6 order-lg-2 position-relative" data-aos="zoom-out">
-          <img src="assets/img/img_sq_1.jpg" alt="Image" class="img-fluid">
+          <img src={% static 'img/img_sq_1.jpg' %} alt="Image" class="img-fluid">
           <a href="https://www.youtube.com/watch?v=L0l3LERJDwc" class="glightbox pulsating-play-btn">
             <span class="play"><i class="bi bi-play-fill"></i></span>
           </a>
