--- a/templates/contact.html
+++ b/templates/contact.html
@@ -73,7 +73,16 @@ Contact
         </div>
 
         <div class="col-lg-8">
-          <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+
+            {% for message in messages %}
+            <div class="alert alert-{{message.tags}} alert-dismissible fade show" role="alert">
+                <strong> {{message}} </strong>
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+              </div>
+              {% endfor %} 
+
+          <form action="/contact/" method="post" role="form" class="php-email-form">
+            {% csrf_token %}
             <div class="row">
               <div class="col-md-6 form-group">
                 <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required="">
