--- a/templates/contact.html
+++ b/templates/contact.html
@@ -81,7 +81,7 @@ Contact
               </div>
               {% endfor %} 
 
-          <form action="/contact/" method="post" role="form" class="php-email-form">
+          <form action={% url "contact" %} method="post" role="form" class="php-email-form">
             {% csrf_token %}
             <div class="row">
               <div class="col-md-6 form-group">
