--- a/templates/service.html
+++ b/templates/service.html
@@ -9,6 +9,23 @@ services
 
 {% block body %}
 
+    <!-- Page Title -->
+    <div class="page-title dark-background" data-aos="fade" style="background-image: url('{% static 'img/page-title-bg.webp' %}');">
+      <div class="container position-relative">
+        <h1>Services</h1>
+        <p>
+          Home
+          /
+          Services</p>
+        <nav class="breadcrumbs">
+          <ol>
+            <li><a href="index.html">Home</a></li>
+            <li class="current">Services</li>
+          </ol>
+        </nav>
+      </div>
+    </div><!-- End Page Title -->
+
 <section id="services" class="services section">
 
     <!-- Section Title -->
