--- a/templates/contact.html
+++ b/templates/contact.html
@@ -20,7 +20,7 @@ Contact
       </p>
       <nav class="breadcrumbs">
         <ol>
-          <li><a href="index.html">Home</a></li>
+          <li><a href={% url "index" %}>Home</a></li>
           <li class="current">Contact</li>
         </ol>
       </nav>
