--- a/templates/about.html
+++ b/templates/about.html
@@ -10,13 +10,13 @@ About
 {% block body %}
 
     <!-- Page Title -->
-    <div class="page-title dark-background" data-aos="fade" style="background-image: url('{% static 'img/page-title-bg.webp' %}');">
+    <div class="page-title dark-background" data-aos="fade" style="background-image: url('{% static 'img/potatoes.webp' %}');">
       <div class="container position-relative">
         <h1>About</h1>
         <p>Esse dolorum voluptatum ullam est sint nemo et est ipsa porro placeat quibusdam quia assumenda numquam molestias.</p>
         <nav class="breadcrumbs">
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href={% url "index" %}>Home</a></li>
             <li class="current">About</li>
           </ol>
         </nav>
