--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,24 @@ Home
 
 
 {% block body %}
+
+    <!-- Page Title -->
+    <div class="page-title dark-background" data-aos="fade" style="background-image: url('{% static 'img/mesisiek.webp' %}');">
+      <div class="container position-relative">
+        <h1>Home</h1>
+        <p>
+          Home
+          /
+          Services</p>
+        <nav class="breadcrumbs">
+          <ol>
+            <li><a href={% url "index" %}>Home</a></li>
+            <li class="current">Services</li>
+          </ol>
+        </nav>
+      </div>
+    </div><!-- End Page Title -->
+
 <section id="hero" class="hero section dark-background">
 
     <div id="hero-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">
