--- a/templates/service.html
+++ b/templates/service.html
@@ -10,7 +10,7 @@ services
 {% block body %}
 
     <!-- Page Title -->
-    <div class="page-title dark-background" data-aos="fade" style="background-image: url('{% static 'img/page-title-bg.webp' %}');">
+    <div class="page-title dark-background" data-aos="fade" style="background-image: url('{% static 'img/maize.webp' %}');">
       <div class="container position-relative">
         <h1>Services</h1>
         <p>
@@ -19,7 +19,7 @@ services
           Services</p>
         <nav class="breadcrumbs">
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href={% url "index" %}>Home</a></li>
             <li class="current">Services</li>
           </ol>
         </nav>
