--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
               <li><a href="/about">About Us</a></li>
               <li><a href='/service'>Our Services</a></li>
               <li><a href="testimonials.html">Testimonials</a></li>
-              <li><a href="blog.html">Blog</a></li>
+              <li><a href="/blog">Blog</a></li>
               <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
                   <li><a href="#">Dropdown 1</a></li>
