--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
     
           <nav id="navmenu" class="navmenu">
             <ul>
-              <li><a href="index.html" class="active">Home</a></li>
+              <li><a href="/" class="active">Home</a></li>
               <li><a href="/about">About Us</a></li>
               <li><a href='/service'>Our Services</a></li>
               <li><a href="testimonials.html">Testimonials</a></li>
