--- a/templates/contact.html
+++ b/templates/contact.html
@@ -10,7 +10,7 @@ Contact
 {% block body %}
 
 
-  <div class="page-title dark-background" data-aos="fade" style="background-image: url('{% static 'img/page-title-bg.webp' %}');">
+  <div class="page-title dark-background" data-aos="fade" style="background-image: url('{% static 'img/wheat.webp' %}');">
     <div class="container position-relative">
       <h1>Contact</h1>
       <p>
