--- a/templates/service.html
+++ b/templates/service.html
@@ -10,7 +10,7 @@ services
 {% block body %}
 
     <!-- Page Title -->
-    <div class="page-title dark-background" data-aos="fade" style="background-image: url('{% static 'img/maize.webp' %}');">
+    <div class="page-title dark-background" data-aos="fade" style="background-image: url('{% static 'img/pineapple.webp' %}');">
       <div class="container position-relative">
         <h1>Services</h1>
         <p>
