--- a/templates/blog.html
+++ b/templates/blog.html
@@ -10,7 +10,7 @@ Blog
 {% block body %}
 
 <!-- Page Title -->
-<div class="page-title dark-background" data-aos="fade" style="background-image: url(assets/img/page-title-bg.webp);">
+<div class="page-title dark-background" data-aos="fade" style="background-image: url('{% static 'img/tea.webp' %}');">
     <div class="container position-relative">
       <h1>Blog</h1>
       <p>
